added certification links and more css styling

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello! I'm <strong>Bwacha!</strong>  I'm a self-taught Data Science Enthusiast with over two years of experience in the Testing Domain. I hold a Bachelor's of Engineering  degree in <strong>Chemical Engineering</strong>. In the world of data and discovery, I'm on a journey of constant exploration. I've developed a passion for Data Science.
+                        Hello! I'm <strong>Bwacha!</strong>  I'm a self-taught Data Science Enthusiast with over two years of experience in the Testing Domain. In the world of data and discovery, I'm on a journey of constant exploration. I hold a Bachelor's of Engineering  degree in <strong>Chemical Engineering</strong>.  
                         <br>
                         <br>
                         In my learning journey, I prefer working with <strong>Python</strong> and utilize platforms such as <strong> Google Colab and Kaggle</strong>. I primarily rely on free and open-source resources like <strong>Forage, YouTube, DataCamp, Google's ML programs, FreecodeCamp, Cisco Networking Academy, GitHub, LinkedIn, and extensive online research </strong>. I firmly believe in the immense potential of these open-source resources not just gateways to knowledge but bridges to innovation.
@@ -116,7 +116,7 @@
                         <br>
                         I look ahead with excitement, ready to embrace the limitless possibilities that Data Science and Machine Learning hold.
 
-                        Remember, in the words of a great American president, Barack Obama, "We are the ones we've been waiting for. We are the change that we seek." Together, let's seek knowledge, embrace change, and make an impact.
+                        In the words of a great American president, Barack Obama, <strong>"We are the change that we seek."</strong> Together, let's seek knowledge, embrace change, and make an impact.
 
                         <br>Welcome to my world of data and dreams.<br>
                         
@@ -238,8 +238,8 @@
 
     <div id="education" class="background-alt">
         <div class="container">
-            <center><h2 class="heading text-center">Education</h2>
-            </center>
+            <center><h2 class="heading">Education</h2></center>
+            
             <div class="row">
                 <div class="col-md-4">
                     <div class="education-block">
@@ -255,7 +255,7 @@
                         <p><span class="education-date">March 2017 - Sept 2023</span></p>
                         <p>Doctrina Mater Artium.</p>
                         <div style="display: inline-block;">
-                            <a href="https://atbu.edu.ng/">View</a>
+                          <center> <a href="https://atbu.edu.ng/">View</a> </center>  
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                             Data Science Virtual Internship program by Cognizant through Forage. This internship is about creating a plan to answer the client problem statement, analyzing and Visualizing Sales Data, and training a python model and outputing performance metrics.
                         </p>
                         <center> <a
-                                href="https://github.com/bwacha99/Cognizant-Virtual-Program">View</a>
+                                href="https://drive.google.com/file/d/10ARn6OXRBY-orTjMSW7Hip4-Zn0NZSg7/view?usp=drive_link">View</a>
                         </center>
                     </div>
                     <!-- End .project-info -->
@@ -314,7 +314,7 @@
                         <p >
                             Data science virtual internship programme by British Airways through Forage. This internship is about analyzing customer reviews using sentimental analysis and highlighting our insights and analysis.
                         </p>
-                        <center> <a href="https://github.com/bwacha99/British-Airways-virtual-internship">View</a>
+                        <center> <a href="https://drive.google.com/file/d/108Niag3ODATshhE9mmuXqx9SJhXb61DK/view?usp=drive_link">View</a>
                         </center>
                     </div>
                     <!-- End .project-info -->
@@ -354,7 +354,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\HR.gif" />
+                        <img src="images\Free_code_camp.jfif" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -376,7 +376,7 @@
                 </div>
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\HR.gif" />
+                        <img src="images\Datacamp.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -400,12 +400,12 @@
                 </div>
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\HR.gif" />
+                        <img src="images\HackerRank.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <center>
-                        <h3> HackerRank </h3>
+                            <h3> HackerRank </h3>
                         </center>
                         <p>
                             <ul>
@@ -422,7 +422,7 @@
                 </div>
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\HR.gif" />
+                        <img src="images\great_learning.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -455,7 +455,7 @@
         <h2 class="heading">Working Experience</h2>
         <div id="experience-timeline">
             <div data-date="June 2021 – Dec 2021">
-                <h3>NasCo HouseHolds & Products</h3>
+                <h3>Nasco HouseHolds & Products</h3>
                 <h4>Units Operations Team</h4>
                 <p>
                     <div style="display: inline-block; color: rgb(21, 21, 22)">
